--- a/public/css/components.css
+++ b/public/css/components.css
@@ -10,7 +10,7 @@
 	text-decoration: none;
 	border: none;
 	outline: none;
-    font-family: 'Inter', sans-serif;
+	font-family: "Inter", sans-serif;
 }
 ul {
 	list-style: none;
@@ -41,6 +41,12 @@ header .container {
 }
 header .container .links {
 	display: flex;
-	gap: 20px;
+	gap: 40px;
+}
+header .container .links a li {
+	font-weight: 400;
+	font-size: 24px;
+	line-height: 20px;
+	color: black;
 }
 /* end  header section */
