--- a/public/css/mondher.css
+++ b/public/css/mondher.css
@@ -3,11 +3,11 @@
 .about {
     display: flex;
     flex-direction: row;
-   justify-content: center;
+    justify-content: center;
     align-items: center;
     gap: 40px;
     flex-wrap: wrap;
-    margin-left: 30px;
+    background-color:#F4F5F9;
     
     
 }
