--- a/public/css/how-it-works.css
+++ b/public/css/how-it-works.css
@@ -2,7 +2,7 @@
     width: fit-content;
     position: relative;
     font-weight: 900;
-    font-size: 100px;
+    font-size: 80px;
     line-height: 138px;
 }
 
@@ -26,7 +26,7 @@
 
 .how-it-works .features .feature h2 {
     font-weight: 900;
-    font-size: 70px;
+    font-size: 50px;
     line-height: 138px;
 }
 
@@ -34,4 +34,8 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 36px;
+}
+
+.how-it-works .features .feature object {
+    scale: 0.8;
 }
