--- a/public/css/home.css
+++ b/public/css/home.css
@@ -9,8 +9,10 @@ section {
 }
 /* start the main section */
 section.main .content {
-	flex-basis: 80%;
 	position: relative;
+}
+section.main .content h1 {
+	max-width: 700px;
 }
 section.main .content > object {
 	position: absolute;
@@ -18,7 +20,7 @@ section.main .content > object {
 	right: 0;
 }
 section.main h1 {
-	font-size: 60px;
+	font-size: 70px;
 	line-height: 80px;
 	position: relative;
 }
@@ -36,7 +38,7 @@ section.main h1 .underlined object {
 	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
-	bottom: -40px;
+	bottom: -20px;
 	width: 250px;
 }
 section.main .image {
@@ -58,15 +60,14 @@ section.main .buttons a {
 }
 /* start the about section */
 .about {
-	padding-top: 50px;
-	margin-top: 50px;
+	background-color: #f4f5f9;
+}
+.about .container {
+	padding: 15px;
 	display: flex;
-	flex-direction: row;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
 	gap: 40px;
-	flex-wrap: wrap;
-	background-color: #f4f5f9;
 }
 
 .about .title {
@@ -84,7 +85,7 @@ section.main .buttons a {
 }
 .about .title div h1 {
 	font-weight: 900;
-	font-size: 60px;
+	font-size: 70px;
 	line-height: 138px;
 }
 .about .title .desc {
@@ -95,3 +96,143 @@ section.main .buttons a {
 .about .image {
 	flex-basis: 40%;
 }
+/* start how it work section */
+.how-it-works .container{
+	padding: 15px;
+}
+.how-it-works h1 {
+	width: fit-content;
+	position: relative;
+	font-size: 70px;
+	line-height: 110px;
+}
+
+.how-it-works h1 object {
+	position: absolute;
+	right: -75px;
+	top: -25px;
+}
+
+.how-it-works .features {
+	display: flex;
+	gap: 50px;
+	flex-wrap: wrap;
+}
+
+.how-it-works .features .feature {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+}
+
+.how-it-works .features .feature h2 {
+	font-size: 40px;
+	line-height: 138px;
+}
+
+.how-it-works .features .feature p {
+	font-weight: 400;
+	font-size: 24px;
+	line-height: 36px;
+}
+
+.how-it-works .features .feature object {
+	scale: 0.8;
+}
+/* start the contact section */
+.contact-us {
+	background-color: #f4f5f9;
+}
+.contact-us .container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	gap: 40px;
+	flex-wrap: wrap;
+}
+.contact-us .text {
+	flex-basis: 48%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+}
+.contact-us .text p {
+	line-height: 35px;
+}
+.contact-us .text h1 {
+	font-size: 70px;
+}
+.icons {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	margin-top: 40px;
+}
+.icon {
+	background-color: #1e214e;
+	padding: 10px;
+	border-radius: 5px;
+}
+.icons .first-icon,
+.icons .second-icon,
+.icons .third-icon {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+	margin-bottom: 20px;
+}
+.icons .first-icon .par .first-par,
+.icons .second-icon .par .first-par,
+.icons .third-icon .par .first-par {
+	font-weight: 700;
+	color: black;
+	font-size: 16px;
+	line-height: unset;
+}
+.icons .first-icon .par p,
+.icons .second-icon .par p,
+.icons .third-icon .par p {
+	color: #817b7b;
+	font-size: 12px;
+	line-height: unset;
+}
+
+.form {
+	flex-basis: 25%;
+}
+.form {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	background-color: #1e214e;
+	padding: 15px;
+	border-radius: 5px;
+}
+.form input,
+.form textarea {
+	width: 100%;
+	height: 40px;
+	border-radius: 10px;
+	border: 1px solid #e5e5e5;
+	padding: 0 20px;
+	margin-bottom: 20px;
+}
+.form textarea {
+	height: 150px;
+	color: #8d8888;
+	padding-top: 10px;
+}
+.form .fulled_button {
+	width: 100%;
+}
+
+/* end the contact section */
+
+/*  */
