--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,9 @@
 :root {
 	--main-green: #06c69a;
 }
+html {
+	scroll-behavior: smooth;
+}
 section {
 	display: flex;
 	justify-content: space-between;
@@ -16,8 +19,8 @@ section.main .content h1 {
 }
 section.main .content > object {
 	position: absolute;
-	top: -50px;
-	right: 0;
+	top: -20px;
+	right: 50px;
 }
 section.main h1 {
 	font-size: 70px;
@@ -97,7 +100,7 @@ section.main .buttons a {
 	flex-basis: 40%;
 }
 /* start how it work section */
-.how-it-works .container{
+.how-it-works .container {
 	padding: 15px;
 }
 .how-it-works h1 {
@@ -126,29 +129,31 @@ section.main .buttons a {
 	gap: 20px;
 }
 
-.how-it-works .features .feature h2 {
-	font-size: 40px;
-	line-height: 138px;
+.how-it-works .features .feature span {
+	font-size: 35px;
+	margin-bottom: 10px;
+	font-weight: 600;
 }
 
 .how-it-works .features .feature p {
 	font-weight: 400;
-	font-size: 24px;
+	font-size: 20px;
 	line-height: 36px;
 }
 
 .how-it-works .features .feature object {
-	scale: 0.8;
+	width: 150px;
 }
 /* start the contact section */
 .contact-us {
 	background-color: #f4f5f9;
 }
 .contact-us .container {
+	padding: 15px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	align-items: center;
+	align-items: flex-end;
 	gap: 40px;
 	flex-wrap: wrap;
 }
@@ -170,12 +175,22 @@ section.main .buttons a {
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
-	margin-top: 40px;
+	gap: 15px;
+	margin-top: 50px;
 }
 .icon {
 	background-color: #1e214e;
 	padding: 10px;
 	border-radius: 5px;
+	width: 45px;
+	height: 45px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.icon img {
+	width: 30px;
+	height: 30px;
 }
 .icons .first-icon,
 .icons .second-icon,
@@ -185,7 +200,6 @@ section.main .buttons a {
 	justify-content: center;
 	align-items: center;
 	gap: 20px;
-	margin-bottom: 20px;
 }
 .icons .first-icon .par .first-par,
 .icons .second-icon .par .first-par,
@@ -204,7 +218,7 @@ section.main .buttons a {
 }
 
 .form {
-	flex-basis: 25%;
+	flex-basis: 1;
 }
 .form {
 	display: flex;
@@ -213,7 +227,7 @@ section.main .buttons a {
 	align-items: center;
 	background-color: #1e214e;
 	padding: 15px;
-	border-radius: 5px;
+	border-radius: 10px;
 }
 .form input,
 .form textarea {
