--- a/public/css/home.css
+++ b/public/css/home.css
@@ -159,7 +159,7 @@ section.main .buttons a {
 	padding: 15px;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	align-items: flex-end;
 	gap: 40px;
 	flex-wrap: wrap;
