--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,6 +13,8 @@
         <input type="text" name="email" id="email">
         <label for="password">Password</label>
         <input type="password" name="password" id="password">
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name">
         <button type="submit">Register</button>
     </form>
 </body>
