--- a/views/register.ejs
+++ b/views/register.ejs
@@ -38,9 +38,9 @@
         </div>
         <div class="right">
             <form action="/api/v1/auth/register" method="post">
-                <input type="text" placeholder="Enter your full name" name="name">
-                <input type="email" placeholder="Enter your email adress" name="email">
-                <input type="password" placeholder="Password" name="password">
+                <input type="text" placeholder="Enter your full name" name="name" id="name">
+                <input type="email" placeholder="Enter your email adress" name="email" id="email">
+                <input type="password" placeholder="Password" name="password" id="password">
                 <div class="options">
                     <div class="remember">
                         <input type="checkbox" id="remember" name="remember">
@@ -69,6 +69,8 @@
         </div>
     </main>
     <script src="./js//home.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <script src="./js/register.js"></script>
 </body>
 
 </html>
