--- a/public/css/market.css
+++ b/public/css/market.css
@@ -6,30 +6,9 @@
 body {
 	background-color: var(--gray);
 }
-.search-bar {
-	padding-top: 40px;
-}
-.search-bar .container {
-	display: flex;
-	justify-content: space-between;
-	background-color: var(--footer-back);
-	border-radius: 10px;
-}
-.search-bar .container select {
-	background-color: var(--footer-back);
-	color: white;
-	padding: 0 15px;
-	border: solid 1px white;
-	border-radius: 10px;
-}
-.search-bar .container input {
-	padding: 10px;
-	width: 350px;
-	border-radius: 10px;
-}
-.data .container {
 
-	padding: 5px;
+.data .container {
+	padding: 20px 5px;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(550px, 1fr));
 	gap: 40px;
@@ -51,9 +30,14 @@ body {
 	font-size: 15px;
 	line-height: 20px;
 }
+.data .container .datum img {
+	width: 200px;
+	height: 200px;
+}
 .data .container .datum .title {
 	font-weight: 400;
-	font-size: 17px;
+	font-size: 20px;
+	font-weight: 400;
 	line-height: 20px;
 }
 .desc {
