added create data request

--- a/views/create-data-request.ejs
+++ b/views/create-data-request.ejs
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="./css/requestForm.css" />
 		<link rel="stylesheet" href="./css/components.css" />
 
-		<title>Document</title>
+		<title>New Data Request</title>
 	</head>
 	<body>
 		<!-- Start the Header  -->
