--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,7 @@
             </div>
             <ul class="links"></ul>
             <div class="login">
-                <a href="/login" class="fulled_button">REGISTER</a>
+                <a href="/register" class="fulled_button">REGISTER</a>
             </div>
         </div>
     </header>
