--- a/views/marketplace.ejs
+++ b/views/marketplace.ejs
@@ -40,7 +40,7 @@
 						<option name="" id="">Medical</option>
 						<option name="" id="">Economics</option>
 					</select>
-					<button class="fulled_button">post Data</button>
+					<a class="fulled_button" href="/publish-data">Post data</a>
 				</div>
 			</div>
 		</section>
