--- a/views/home-loggedin.ejs
+++ b/views/home-loggedin.ejs
@@ -23,7 +23,7 @@
 				</div>
 				<ul class="links"></ul>
 				<div class="login">
-					<a href="/login" class="fulled_button">Logout</a>
+					<a href="/logout" class="fulled_button">Logout</a>
 				</div>
 			</div>
 		</header>
