--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
-		<title>Home</title>
+		<title>Document</title>
 	</head>
 	<body>
 		<!-- start the header section -->
@@ -23,7 +23,7 @@
 				</div>
 				<ul class="links"></ul>
 				<div class="login">
-					<a href="/login" class="fulled_button">login</a>
+					<a href="/login" class="fulled_button">Login</a>
 				</div>
 			</div>
 		</header>
@@ -63,6 +63,7 @@
 				<img src="./assets/Group 30.svg" alt="" />
 			</div>
 			</div>
+			 <div class="shadow"></div>
 		</section>
 		<!-- end the about section  -->
 		<!-- start how work section -->
@@ -71,35 +72,48 @@
             <h1>How it works
                 <object data="./assets/Star 1.svg"></object>
             </h1>
-            <div class="features">
-                <div class="feature">
-                    <object data="./assets/prepare.svg"></object>
-                    <div class="desc">
-                        <span>Prepare</span>
-                        <p>Whether you are a seller or a buyer, this step concerns you. Sellers would prepare the datasets they will be posting on our platforms for users. Clients would make research about what type of data they need to look for.</p>
-                    </div>
-                </div>
-                <div class="feature">
-                    <object data="./assets/publish.svg"></object>
-                    <div class="desc">
-                        <span>Publish</span>
-                        <p>If you are a seller having prepared the necessary data, you can publish to the public by one click and start making profits. If you a buyer, then you are dealing with step because the data you wanted was not available, so make sure to provide enough information about what you need in your data request for sellers to get you exactly what you need</p>
-                    </div>
-                </div>
-                <div class="feature">
-                    <object data="./assets/buysell.svg"></object>
-                    <div class="desc">
-                        <span>Buy/Sell</span>
-                        <p>Buyers would see offers on our platform and buy them when needed accustomed to them. Another case scenario, sellers would sell what was available on the request explorer for them to meet exactly the market needs.</p>
-                    </div>
-                </div>
-                <div class="feature">
-                    <object data="./assets/earn.svg"></object>
-                    <div class="desc">
-                        <span>Earn</span>
-                        <p>You sell, you have earn. You find your non to be found data anywhere else here, you have earned what will save you time and efforts for your startup.</p>
-                    </div>
-                </div>
+            <div class="content">
+				<div class="element">
+					<img src="./assets/how_one.png" alt="">
+					<div class="text">
+						<h5>Prepare</h5>
+						<ul>
+							<li>Prepare</li>
+							<li>Organize</li>
+						</ul>
+					</div>
+				</div>
+				<div class="element">
+					<img src="./assets/how_two.png" alt="">
+					<div class="text">
+						<h5>Publish</h5>
+						<ul>
+							<li>Prepare</li>
+							<li>Organize</li>
+						</ul>
+					</div>
+				</div>
+				<div class="element">
+					<img src="./assets/how_three.png" alt="">
+					<div class="text">
+						<h5>Buy/Sell</h5>
+						<ul>
+							<li>Prepare</li>
+							<li>Organize</li>
+						</ul>
+					</div>
+				</div>
+				<div class="element">
+					<img src="./assets/how_four.png" alt="">
+					<div class="text">
+						<h5>Earn</h5>
+						<ul>
+							<li>Prepare</li>
+							<li>Organize</li>
+						</ul>
+					</div>
+				</div>
+			</div>
             </div>
         </div>
     </section>
@@ -146,6 +160,7 @@
                 <button type="submit" class="fulled_button">Contact</button>
 
         </form></div>
+		<div class="shadow"></div>
     </div>
 		<!-- end the contact section -->
 		<!-- start the footer section -->
