--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,8 +38,8 @@
 						</h1>
 					</div>
 					<div class="buttons">
-						<a href="#" class="fulled_button">MONETIZE DATA</a>
-						<a href="#" class="not_fulled_button">Explore Marketplace</a>
+						<a href="/publish-data" class="fulled_button">MONETIZE DATA</a>
+						<a href="/marketplace" class="not_fulled_button">Explore Marketplace</a>
 					</div>
 					<object data="./assets/Star 1.svg" type=""></object>
 				</div>
